# demex

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
res/: gdtf_attribute_listing.xml  grammar.ebnf  leeGelScraper.js
rsc/: grammar.ebnf
src/: lib.rs  main.rs  ui.rs
src/color/: color_space.rs  mod.rs
src/color/gel/: demex.rs  lee.rs  mod.rs
src/dmx/: mod.rs
src/dmx/artnet/: mod.rs
src/dmx/debug/: mod.rs
src/dmx/output/: debug_dummy.rs  dmx_serial.rs  mod.rs
src/dmx/serial/: mod.rs
src/fixture/: channel.rs  error.rs  layout.rs  mod.rs  patch.rs  state.rs  value_source.rs
src/fixture/channel/: color.rs  error.rs  mod.rs  position.rs  value.rs  value_source.rs
src/fixture/channel2/: channel_modifier.rs  channel_type.rs  channel_value.rs  error.rs  mod.rs
src/fixture/channel2/color/: mod.rs
src/fixture/channel3/: activation_group.rs  attribute.rs  channel_value.rs  channel_value_proto.rs  channel_value_state.rs  mod.rs  utils.rs
src/fixture/effect/: error.rs  mod.rs  speed.rs
src/fixture/effect2/: effect.rs  error.rs  mod.rs
src/fixture/feature/: group.rs
src/fixture/gdtf/: error.rs  mod.rs  sync.rs
src/fixture/handler/: error.rs  mod.rs  sync.rs
src/fixture/keyframe_effect/: effect.rs  effect_keyframe.rs  effect_keyframe_curve.rs  effect_layer.rs  effect_runtime.rs  mod.rs
src/fixture/presets/: color.rs  command_slice.rs  error.rs  group.rs  mmacro.rs  mod.rs  position.rs  preset.rs
src/fixture/selection/: mod.rs
src/fixture/sequence/: cue.rs  executor.rs  mod.rs  preset.rs  runtime.rs
src/fixture/timing/: error.rs  mod.rs  speed_master.rs  tap.rs
src/fixture/updatables/: error.rs  mod.rs  runtime.rs
src/headless/: error.rs  id.rs  mod.rs  protocol.rs  sync.rs
src/headless/controller/: mod.rs
src/headless/node/: mod.rs
src/headless/packet/: controller.rs  controller_udp.rs  headless.rs  mod.rs  node.rs
src/input/: button.rs  device.rs  error.rs  fader.rs  message.rs  mod.rs
src/input/midi/: mod.rs  usb.rs  utils.rs
src/input/profile/: akai.rs  mod.rs
src/input/timecode/: mod.rs  packet.rs  rate.rs
src/lexer/: error.rs  mod.rs  token.rs
src/parser/: error.rs  mod.rs  mod2.rs
src/parser/nodes/: fixture_selector.rs  mod.rs  object.rs
src/show/: context.rs  mod.rs  ui.rs
src/storage/: mod.rs
src/ui/: command.rs  constants.rs  context.rs  edit_request.rs  error.rs  lock.rs  mod.rs  stats.rs  theme.rs
src/ui/components/: fixture_selection_editor.rs  mod.rs  position_selector.rs  quick_menu.rs  separator.rs  slider.rs  splitter.rs  tab_viewer.rs  wave_editor.rs
src/ui/dlog/: dialog.rs  mod.rs
src/ui/edit/: mod.rs
src/ui/graphics/: layout_projection.rs  mod.rs
src/ui/iimpl/: mod.rs  preset.rs  token.rs  value_source.rs
src/ui/log/: dialog.rs  mod.rs
src/ui/patch/: mod.rs  template.rs
src/ui/tabs/: debug_tab.rs  empty_tab.rs  faders_tab.rs  fixture_controls_tab.rs  fixture_list_tab.rs  layout_view_tab.rs  logs_tab.rs  mod.rs  performance_tab.rs  preset_grid_tab.rs  sequences_list_tab.rs  timecode_clock_tab.rs  timing_tab.rs
src/ui/traits/: color.rs
src/ui/utils/: circle.rs  color.rs  fonts.rs  icon.rs  load.rs  mod.rs  painter.rs  rect.rs  vec.rs
src/ui/viewport/: mod.rs  position.rs  viewport_type.rs
src/ui/window/: mod.rs
src/utils/: color.rs  deadlock.rs  ease.rs  hash.rs  math.rs  mod.rs  range.rs  serde.rs  thread.rs  version.rs
test_data/: capture.json  cinema.json  neopixel.json  patch.json  ph.json  show.json  stress.json  theater.json
test_data/fixtures/: Briteq-Powerpixel8-RGB.json  Briteq@POWERPIXEL8-RGB@20240710_2_Misdat.gdtf  Dimmer.json  EUROLITE-LED-TMH-X4.json  Eurolite@LED_TMH-X4@Version_16.gdtf  ExpoLite-TourLED.json  Expolite@Tour-LED_Pro_28_CM_plus_W_Zoom_MKII@2.3._out_for_real_world_testing_-_fixed_virtualDim_Full_Mode.gdtf  GDTF_Template_a@Basic_Conventional@test.gdtf  Martin_Professional@MAC_Aura_PXL@With_Masterdim.gdtf  demex@Neopixel@Remove_White_channel.gdtf
(+103 files in other folders)
