[package]
name = "demex"
version = "0.1.0"
edition = "2021"

[dependencies]
artnet_protocol = { git = "https://github.com/matteolutz/artnet_protocol" }
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
eframe = { features = ["default"], version = "0.28.1" }
egui = { features = ["default"], version = "0.28.1" }
egui-probe = { version = "0.5.1", features = ["derive"] }
egui_dock = "0.13.0"
egui_extras = { features = ["default", "all_loaders"], version = "0.28.1" }
image = { version = "0.24.9", features = ["png"] }
itertools = "0.13.0"
midir = "0.10.1"
open = "5.3.2"
open_dmx = "1.1.1"
parking_lot = { features = ["deadlock_detection"], version = "0.12.3" }
rand = "0.8.5"
ref-map = "0.1.3"
rfd = "0.15.2"
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "1.0.135"
strum = { version = "0.27.0", features = ["derive"] }
strum_macros = "0.27.0"
