[package]
name = "demex"
version = "0.1.14"
edition = "2021"

[dependencies]
artnet_protocol = { git = "https://github.com/matteolutz/artnet_protocol" }
catppuccin-egui = { version = "5.5.0", default-features = false, features = [
    "egui31",
] }
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
eframe = { features = ["default"], version = "0.31.1" }
egui = { features = ["default", "serde"], version = "0.31.1" }
egui-probe = { version = "0.8.0", features = ["derive"] }
egui_dock = "0.16.0"
egui_extras = { features = ["default", "all_loaders"], version = "0.31.1" }
env_logger = "0.11.6"
image = { version = "0.25.5", features = ["png"] }
interpolator = "0.5.0"
itertools = "0.13.0"
log = "0.4.26"
midir = { version = "0.10.1", features = ["winrt"] }
open = "5.3.2"
open_dmx = "1.1.1"
parking_lot = { features = ["deadlock_detection"], version = "0.12.3" }
rand = "0.8.5"
ref-map = "0.1.3"
rfd = "0.15.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.0", features = ["derive"] }
strum_macros = "0.27.0"
