[package]
name = "demex"
version = "0.1.18"
edition = "2021"

[dependencies]
catppuccin-egui = { version = "5.5.0", default-features = false, features = [
    "egui31",
], optional = true }
eframe = { features = [
    "default",
    "persistence",
], version = "0.31.1", optional = true }
egui = { features = ["default", "serde"], version = "0.31.1", optional = true }
egui-probe = { version = "0.8.0", features = ["derive"], optional = true }
egui_dock = { version = "0.16.0", optional = true }
egui_extras = { features = [
    "default",
    "all_loaders",
], version = "0.31.1", optional = true }
image = { version = "0.25.5", features = ["png"], optional = true }
open = { version = "5.3.2", optional = true }
rfd = { version = "0.15.2", optional = true }

ecolor = { version = "0.31.1", features = ["serde"] }
emath = { version = "0.31.1", features = ["serde"] }
artnet_protocol = { git = "https://github.com/matteolutz/artnet_protocol" }
byteorder = "1.5.0"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
env_logger = "0.11.6"
gdtf = { git = "https://github.com/matteolutz/gdtf-rs" }
interpolator = "0.5.0"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.26"
midir = { version = "0.10.1", features = ["winrt"] }
nix = { version = "0.30.1", features = ["socket"] }
open_dmx = "1.1.1"
parking_lot = { features = ["deadlock_detection"], version = "0.12.3" }
rand = "0.8.5"
ref-map = "0.1.3"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.0", features = ["derive"] }
strum_macros = "0.27.0"
uuid = "1.16.0"
ciborium = "0.2.2"

[features]
default = ["ui"]
ui = [
    "dep:catppuccin-egui",
    "dep:eframe",
    "dep:egui",
    "dep:egui-probe",
    "dep:egui_dock",
    "dep:egui_extras",
    "dep:image",
    "dep:open",
    "dep:rfd",
]
